--- a/index.html
+++ b/index.html
@@ -126,218 +126,217 @@
   <div id="cart" class="cart" style="display:none;"></div>
 
   <script>
-  const flavours = ["Ледяной манго", "Клубника с молоком", "Мятный взрыв", "Арбуз", "Жвачка"];
-  let cart = [];
-  let vapes = [];
+    const vapes = [
+      { name: "TORNADO 9K", puffs: 9000, nicotine: "5%", price: 20, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/66885e81ee9cc328347f1cdc_%D0%94%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD%20%D0%B1%D0%B5%D0%B7%20%D0%BD%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F%20(18).png" },
+      { name: "VOZOL Gear 10K", puffs: 10000, nicotine: "2%", price: 25, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680101749374c38deb8e8f2f_LbjA4HjHKr7DY9FACNgDDQYZWnumvwDpv3hQghwv.webp" },
+      { name: "FUMOT Crystal 12K", puffs: 12000, nicotine: "2.5%", price: 22, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680102a07cb5b9af192ac402_Fumot-Crystal-12000-3.jpeg" }
+    ];
+  
+    const flavours = ["Ледяной манго", "Клубника с молоком", "Мятный взрыв", "Арбуз", "Жвачка"];
+    let cart = [];
 
-  const vapeListEl = document.getElementById('vapeList');
-  const flavourListEl = document.getElementById('flavourList');
-  const cartEl = document.getElementById('cart');
+    const vapeListEl = document.getElementById('vapeList');
+    const flavourListEl = document.getElementById('flavourList');
+    const cartEl = document.getElementById('cart');
 
-  fetch('vapes.json')
-    .then(response => response.json())
-    .then(data => {
-      vapes = data;
-      renderVapes();
-    })
-    .catch(error => console.error('Ошибка загрузки JSON:', error));
-
-  function renderVapes() {
-    vapeListEl.innerHTML = '';
-    vapes.forEach(vape => {
-      const card = document.createElement('div');
-      card.className = 'card';
-      card.innerHTML = `
-        <img src="${vape.image}" alt="${vape.name}">
-        <div><strong>${vape.name}</strong><br>${vape.nicotine}, ${vape.puffs} затяжек<br>€${vape.price}</div>
-      `;
-      card.onclick = () => showFlavours(vape);
-      vapeListEl.appendChild(card);
-    });
-  }
-
-  function showFlavours(vape) {
-    vapeListEl.style.display = 'none';
-    cartEl.style.display = 'none';
-    flavourListEl.style.display = 'flex';
-    flavourListEl.innerHTML = '';
-
-    const selectedFlavours = new Set();
-
-    const flavourWrap = document.createElement('div');
-    flavourWrap.style.flexWrap = "wrap";
-    flavourWrap.style.display = "flex";
-    flavourWrap.style.justifyContent = "center";
-    flavourWrap.style.gap = "1rem";
-
-    flavours.forEach(flavour => {
-      const card = document.createElement('div');
-      card.className = 'card';
-      card.innerText = flavour;
-      card.onclick = () => {
-        if (selectedFlavours.has(flavour)) {
-          selectedFlavours.delete(flavour);
-          card.classList.remove('selected');
-        } else {
-          selectedFlavours.add(flavour);
-          card.classList.add('selected');
-        }
-      };
-      flavourWrap.appendChild(card);
-    });
-
-    const bottomButtons = document.createElement('div');
-    bottomButtons.style.width = "100%";
-    bottomButtons.style.display = "flex";
-    bottomButtons.style.justifyContent = "space-between";
-    bottomButtons.style.marginTop = "20px";
-
-    const backBtn = document.createElement('button');
-    backBtn.textContent = "⬅ Назад";
-    backBtn.onclick = () => goBack();
-
-    const addBtn = document.createElement('button');
-    addBtn.textContent = "➕ В корзину";
-    addBtn.onclick = () => {
-      selectedFlavours.forEach(flavour => {
-        cart.push({ vape: vape.name, flavour, price: vape.price, qty: 1 });
+    function renderVapes() {
+      vapeListEl.innerHTML = '';
+      vapes.forEach(vape => {
+        const card = document.createElement('div');
+        card.className = 'card';
+        card.innerHTML = `
+          <img src="${vape.image}" alt="${vape.name}">
+          <div><strong>${vape.name}</strong><br>${vape.nicotine}, ${vape.puffs} затяжек<br>€${vape.price}</div>
+        `;
+        card.onclick = () => showFlavours(vape);
+        vapeListEl.appendChild(card);
       });
-      showCart();
-    };
-
-    bottomButtons.appendChild(backBtn);
-    bottomButtons.appendChild(addBtn);
-
-    flavourListEl.appendChild(flavourWrap);
-    flavourListEl.appendChild(bottomButtons);
-  }
-
-  function goBack() {
-    flavourListEl.style.display = 'none';
-    cartEl.style.display = 'none';
-    vapeListEl.style.display = 'flex';
-  }
-
-  function showCart() {
-    vapeListEl.style.display = 'none';
-    flavourListEl.style.display = 'none';
-    cartEl.style.display = 'flex';
-    updateCart();
-  }
-
-  function updateCart() {
-    cartEl.innerHTML = '<h2>🛒 Корзина</h2>';
-    let total = 0;
-
-    const itemsWrap = document.createElement('div');
-    itemsWrap.style.width = '100%';
-    itemsWrap.style.display = 'flex';
-    itemsWrap.style.flexDirection = 'column';
-    itemsWrap.style.gap = '1rem';
-
-    cart.forEach((item, i) => {
-      const itemContainer = document.createElement('div');
-      itemContainer.style.display = 'flex';
-      itemContainer.style.flexDirection = 'column';
-      itemContainer.style.background = 'rgba(255,255,255,0.05)';
-      itemContainer.style.borderRadius = '12px';
-      itemContainer.style.padding = '1rem';
-
-      const topRow = document.createElement('div');
-      topRow.style.display = 'flex';
-      topRow.style.justifyContent = 'space-between';
-      topRow.style.alignItems = 'center';
-
-      const name = document.createElement('div');
-      name.innerHTML = `<strong>${item.vape}</strong><br>${item.flavour}`;
-
-      const controls = document.createElement('div');
-      controls.style.display = 'flex';
-      controls.style.alignItems = 'center';
-      controls.style.gap = '0.5rem';
-
-      const minus = document.createElement('button');
-      minus.textContent = '−';
-      minus.onclick = () => {
-        if (item.qty > 1) item.qty--;
-        else cart.splice(i, 1);
-        updateCart();
-      };
-
-      const qty = document.createElement('span');
-      qty.textContent = item.qty;
-
-      const plus = document.createElement('button');
-      plus.textContent = '+';
-      plus.onclick = () => {
-        item.qty++;
-        updateCart();
-      };
-
-      controls.appendChild(minus);
-      controls.appendChild(qty);
-      controls.appendChild(plus);
-
-      topRow.appendChild(name);
-      topRow.appendChild(controls);
-      itemContainer.appendChild(topRow);
-
-      const price = document.createElement('div');
-      price.style.marginTop = '0.5rem';
-      price.style.fontSize = '0.9rem';
-      price.style.opacity = '0.7';
-      price.textContent = `€${item.price} / шт`;
-
-      itemContainer.appendChild(price);
-      itemsWrap.appendChild(itemContainer);
-
-      total += item.price * item.qty;
-    });
-
-    cartEl.appendChild(itemsWrap);
-
-    const btnRow = document.createElement('div');
-    btnRow.style.marginTop = '2rem';
-    btnRow.style.display = 'flex';
-    btnRow.style.justifyContent = 'space-between';
-    btnRow.style.width = '100%';
-
-    const backButton = document.createElement('button');
-    backButton.textContent = '⬅ Назад';
-    backButton.onclick = () => goBack();
-    btnRow.appendChild(backButton);
-
-    if (cart.length) {
-      const totalDiv = document.createElement('div');
-      totalDiv.style.marginTop = '1rem';
-      totalDiv.style.fontSize = '1.1rem';
-      totalDiv.innerHTML = `<strong>Итого: €${total.toFixed(2)}</strong>`;
-      cartEl.appendChild(totalDiv);
-
-      const sendBtn = document.createElement('button');
-      sendBtn.textContent = '📨 Отправить заказ';
-      sendBtn.onclick = () => sendOrder();
-      btnRow.appendChild(sendBtn);
-    } else {
-      const emptyMsg = document.createElement('p');
-      emptyMsg.style.marginTop = '1rem';
-      emptyMsg.textContent = 'Корзина пуста.';
-      cartEl.appendChild(emptyMsg);
     }
 
-    cartEl.appendChild(btnRow);
-  }
+    function showFlavours(vape) {
+      vapeListEl.style.display = 'none';
+      cartEl.style.display = 'none';
+      flavourListEl.style.display = 'flex';
+      flavourListEl.innerHTML = '';
 
-  function sendOrder() {
-    if (cart.length === 0) return alert("Корзина пуста!");
-    let total = 0;
-    const message = cart.map(c => {
-      total += c.qty * c.price;
-      return `${c.vape} - ${c.flavour} x${c.qty}`;
-    }).join("%0A");
-    const fullMessage = `NEW ORDER%0A${message}%0AИТОГО: €${total.toFixed(2)}`;
-    window.open(`https://t.me/stas_vape_nl?start=order_${encodeURIComponent(fullMessage)}`, "_blank");
-  }
-</script>
+      const selectedFlavours = new Set();
+
+      const flavourWrap = document.createElement('div');
+      flavourWrap.style.flexWrap = "wrap";
+      flavourWrap.style.display = "flex";
+      flavourWrap.style.justifyContent = "center";
+      flavourWrap.style.gap = "1rem";
+
+      flavours.forEach(flavour => {
+        const card = document.createElement('div');
+        card.className = 'card';
+        card.innerText = flavour;
+        card.onclick = () => {
+          if (selectedFlavours.has(flavour)) {
+            selectedFlavours.delete(flavour);
+            card.classList.remove('selected');
+          } else {
+            selectedFlavours.add(flavour);
+            card.classList.add('selected');
+          }
+        };
+        flavourWrap.appendChild(card);
+      });
+
+      const bottomButtons = document.createElement('div');
+      bottomButtons.style.width = "100%";
+      bottomButtons.style.display = "flex";
+      bottomButtons.style.justifyContent = "space-between";
+      bottomButtons.style.marginTop = "20px";
+
+      const backBtn = document.createElement('button');
+      backBtn.textContent = "⬅ Назад";
+      backBtn.onclick = () => goBack();
+
+      const addBtn = document.createElement('button');
+      addBtn.textContent = "➕ В корзину";
+      addBtn.onclick = () => {
+        selectedFlavours.forEach(flavour => {
+          cart.push({ vape: vape.name, flavour, price: vape.price, qty: 1 });
+        });
+        showCart();
+      };
+
+      bottomButtons.appendChild(backBtn);
+      bottomButtons.appendChild(addBtn);
+
+      flavourListEl.appendChild(flavourWrap);
+      flavourListEl.appendChild(bottomButtons);
+    }
+
+    function goBack() {
+      flavourListEl.style.display = 'none';
+      cartEl.style.display = 'none';
+      vapeListEl.style.display = 'flex';
+    }
+
+    function showCart() {
+      vapeListEl.style.display = 'none';
+      flavourListEl.style.display = 'none';
+      cartEl.style.display = 'flex';
+      updateCart();
+    }
+
+    function updateCart() {
+      cartEl.innerHTML = '<h2>🛒 Корзина</h2>';
+      let total = 0;
+
+      const itemsWrap = document.createElement('div');
+      itemsWrap.style.width = '100%';
+      itemsWrap.style.display = 'flex';
+      itemsWrap.style.flexDirection = 'column';
+      itemsWrap.style.gap = '1rem';
+
+      cart.forEach((item, i) => {
+        const itemContainer = document.createElement('div');
+        itemContainer.style.display = 'flex';
+        itemContainer.style.flexDirection = 'column';
+        itemContainer.style.background = 'rgba(255,255,255,0.05)';
+        itemContainer.style.borderRadius = '12px';
+        itemContainer.style.padding = '1rem';
+
+        const topRow = document.createElement('div');
+        topRow.style.display = 'flex';
+        topRow.style.justifyContent = 'space-between';
+        topRow.style.alignItems = 'center';
+
+        const name = document.createElement('div');
+        name.innerHTML = `<strong>${item.vape}</strong><br>${item.flavour}`;
+
+        const controls = document.createElement('div');
+        controls.style.display = 'flex';
+        controls.style.alignItems = 'center';
+        controls.style.gap = '0.5rem';
+
+        const minus = document.createElement('button');
+        minus.textContent = '−';
+        minus.onclick = () => {
+          if (item.qty > 1) item.qty--;
+          else cart.splice(i, 1);
+          updateCart();
+        };
+
+        const qty = document.createElement('span');
+        qty.textContent = item.qty;
+
+        const plus = document.createElement('button');
+        plus.textContent = '+';
+        plus.onclick = () => {
+          item.qty++;
+          updateCart();
+        };
+
+        controls.appendChild(minus);
+        controls.appendChild(qty);
+        controls.appendChild(plus);
+
+        topRow.appendChild(name);
+        topRow.appendChild(controls);
+        itemContainer.appendChild(topRow);
+
+        const price = document.createElement('div');
+        price.style.marginTop = '0.5rem';
+        price.style.fontSize = '0.9rem';
+        price.style.opacity = '0.7';
+        price.textContent = `€${item.price} / шт`;
+
+        itemContainer.appendChild(price);
+        itemsWrap.appendChild(itemContainer);
+
+        total += item.price * item.qty;
+      });
+
+      cartEl.appendChild(itemsWrap);
+
+      const btnRow = document.createElement('div');
+      btnRow.style.marginTop = '2rem';
+      btnRow.style.display = 'flex';
+      btnRow.style.justifyContent = 'space-between';
+      btnRow.style.width = '100%';
+
+      const backButton = document.createElement('button');
+      backButton.textContent = '⬅ Назад';
+      backButton.onclick = () => goBack();
+      btnRow.appendChild(backButton);
+
+      if (cart.length) {
+        const totalDiv = document.createElement('div');
+        totalDiv.style.marginTop = '1rem';
+        totalDiv.style.fontSize = '1.1rem';
+        totalDiv.innerHTML = `<strong>Итого: €${total.toFixed(2)}</strong>`;
+        cartEl.appendChild(totalDiv);
+
+        const sendBtn = document.createElement('button');
+        sendBtn.textContent = '📨 Отправить заказ';
+        sendBtn.onclick = () => sendOrder();
+        btnRow.appendChild(sendBtn);
+      } else {
+        const emptyMsg = document.createElement('p');
+        emptyMsg.style.marginTop = '1rem';
+        emptyMsg.textContent = 'Корзина пуста.';
+        cartEl.appendChild(emptyMsg);
+      }
+
+      cartEl.appendChild(btnRow);
+    }
+
+    function sendOrder() {
+      if (cart.length === 0) return alert("Корзина пуста!");
+      let total = 0;
+      const message = cart.map(c => {
+        total += c.qty * c.price;
+        return `${c.vape} - ${c.flavour} x${c.qty}`;
+      }).join("%0A");
+      const fullMessage = `NEW ORDER%0A${message}%0AИТОГО: €${total.toFixed(2)}`;
+      window.open(`https://t.me/stas_vape_nl?start=order_${encodeURIComponent(fullMessage)}`, "_blank");
+    }
+
+    renderVapes();
+  </script>  
 </body>
 </html>
