--- a/index.html
+++ b/index.html
@@ -90,11 +90,16 @@
       background: #ff00f2;
       color: #000;
       font-weight: bold;
-      border: none;
+      border: personally none;
       padding: 0.5rem 1rem;
       border-radius: 0.5rem;
       cursor: pointer;
       margin: 1rem;
+    }
+
+    button:disabled {
+      background: #555;
+      cursor: not-allowed;
     }
 
     .cart-item {
@@ -121,24 +126,152 @@
 
   <script>
     const vapes = [
-      { name: "TORNADO 9K", puffs: 9000, nicotine: "5%", price: 20, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/66885e81ee9cc328347f1cdc_%D0%94%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD%20%D0%B1%D0%B5%D0%B7%20%D0%BD%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F%20(18).png" },
-      { name: "TORNADO 15K", puffs: 15000, nicotine: "2%", price: 20, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/66870572a00a5ffa6b348a97_photo_2024-06-28_23-05-58.jpg" },
-      { name: "TORNADO 20K", puffs: 20000, nicotine: "2.5%", price: 25, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/6800fd637ad8b0c49e9b4a8d_randm-fumot-tornado-max-20000.jpg.webp" },
-      { name: "TORNADO 25K", puffs: 25000, nicotine: "2%", price: 30, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/68010084b1e19ad8426e31f0_thumb_1284_0_0_0_0_auto.jpg" },
-      { name: "TORNADO 30K", puffs: 30000, nicotine: "2%", price: 35, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/6801015be861afa63bb79692_fumot-tornado-30k-music-829692.webp" },
-      { name: "VOZOL Gear 10K", puffs: 10000, nicotine: "5%", price: 25, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680101749374c38deb8e8f2f_LbjA4HjHKr7DY9FACNgDDQYZWnumvwDpv3hQghwv.webp" },
-      { name: "VOZOL Gear 20K", puffs: 20000, nicotine: "2%", price: 25, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/6801018cb1e19ad8426f1e7d_VOZOL-GEAR-POWER-20000-1%20(1).jpg" },
-      { name: "VOZOL Gear 25K", puffs: 25000, nicotine: "5%", price: 30, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680101fdcf66a1c4c100b096_vozol%2025k.png" },
-      { name: "VOZOL Vista Plug 15K", puffs: 15000, nicotine: "2%", price: 25, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/6801026f9d2ef545721d5d90_Vozol-Vista-Kit.jpg5_.webp" },
-      { name: "MEDIAMAX PhoneVape 40K", puffs: 40000, nicotine: "2%", price: 30, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680102844b38ea60299f8bf7_%E4%B8%BB%E5%9B%BE-1.webp" },
-      { name: "FUMOT Crystal 12K", puffs: 12000, nicotine: "2%", price: 20, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680102a07cb5b9af192ac402_Fumot-Crystal-12000-3.jpeg" },
-      { name: "FUMOT Crystal 4.5K", puffs: 4500, nicotine: "2%", price: 20, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680102d8891db73fae615a83_SKE_Crystal_Super_Max_4500_Puffs_Disposable_Vape_-_Blog_7eeb6280-186a-42c2-a1a9-e11c0b482fda.webp" },
-      { name: "FUMOT Crystal 600", puffs: 600, nicotine: "2%", price: 10, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680103086570a3c8dc130efc_fumot-randm-crystal-600ec597076-2ce2-4893-86cc-9eab1c467eb0.webp" },
-      { name: "IJOY 40K", puffs: 40000, nicotine: "2%", price: 30, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/68010323d85907bb35fc96c2_ijoy-sd40000-40k-puffs-ai-voice-control-disposable_1200x1200%20(2).webp" },
-      { name: "SHISHA VAPE AlFakher 8K", puffs: 8000, nicotine: "6%", price: 20, image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/6801034ea74e06c09e2092fc_Al-Fakher-Crown-Bar-PRO-8K-Al-Fakher-262869460.webp" }
+      {
+        name: "TORNADO 9K",
+        puffs: 9000,
+        nicotine: "5%",
+        price: 20,
+        image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/66885e81ee9cc328347f1cdc_%D0%94%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD%20%D0%B1%D0%B5%D0%B7%20%D0%BD%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F%20(18).png",
+        flavours: ["Ice Pop", "Blueberry Sour Raspberry", "Rainbow Candy", "Guava Ice", "Mixed Berries"]
+      },
+      {
+        name: "TORNADO 15K",
+        puffs: 15000,
+        nicotine: "2%",
+        price: 20,
+        image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/66870572a00a5ffa6b348a97_photo_2024-06-28_23-05-58.jpg",
+        flavours: [
+          "Apple Peach Pear", "Banana Ice", "Blueberry Bubblegum", "Blueberry on Ice", "Blue Razz Lemonade",
+          "Blueberry Raspberry", "Cola Ice", "Dragon Fruit", "Grape Ice", "Gummy Bear", "Mango on Ice",
+          "Peach Blueberry Candy", "Peach Mango", "Peach Ice", "Pineapple Ice", "Red Energy Ice",
+          "Strawberry Kiwi", "Strawberry Banana", "Strawberry Redbull", "Strawberry Watermelon Lemonade", "Watermelon Ice"
+        ]
+      },
+      {
+        name: "TORNADO 20K",
+        puffs: 20000,
+        nicotine: "2.5%",
+        price: 25,
+        image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/6800fd637ad8b0c49e9b4a8d_randm-fumot-tornado-max-20000.jpg.webp",
+        flavours: ["Pineapple Ice", "Blue Razz Ice", "Grape Ice", "Sour Apple"]
+      },
+      {
+        name: "TORNADO 25K",
+        puffs: 25000,
+        nicotine: "2%",
+        price: 30,
+        image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/68010084b1e19ad8426e31f0_thumb_1284_0_0_0_0_auto.jpg",
+        flavours: ["Double Apple", "Black Ice", "Strawberry Ice", "Miami Mint", "Cherry Cola", "Blueberry on Ice"]
+      },
+      {
+        name: "TORNADO 30K",
+        puffs: 30000,
+        nicotine: "2%",
+        price: 35,
+        image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/6801015be861afa63bb79692_fumot-tornado-30k-music-829692.webp",
+        flavours: [
+          "Peachy Mango Pineapple", "Blueberry on Ice", "Strawberry Grape", "Cola Ice", "Cherry Cola",
+          "Double Apple", "Dr Blue", "Cherry Ice", "Strawberry Ice", "Strawberry Watermelon"
+        ]
+      },
+      {
+        name: "VOZOL Gear 10K",
+        puffs: 10000,
+        nicotine: "5%",
+        price: 25,
+        image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680101749374c38deb8e8f2f_LbjA4HjHKr7DY9FACNgDDQYZWnumvwDpv3hQghwv.webp",
+        flavours: ["Strawberry Ice Cream", "Watermelon Bubblegum"]
+      },
+      {
+        name: "VOZOL Gear 20K",
+        puffs: 20000,
+        nicotine: "2%",
+        price: 25,
+        image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/6801018cb1e19ad8426f1e7d_VOZOL-GEAR-POWER-20000-1%20(1).jpg",
+        flavours: []
+      },
+      {
+        name: "VOZOL Gear 25K",
+        puffs: 25000,
+        nicotine: "5%",
+        price: 30,
+        image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680101fdcf66a1c4c100b096_vozol%2025k.png",
+        flavours: ["Berry Mint", "Grape Mint", "Blue Razz Ice", "Blackberry Ice", "Berry Ice", "Blueberry Ice", "Blackcurrant Ice"]
+      },
+      {
+        name: "VOZOL Vista Plug 15K",
+        puffs: 15000,
+        nicotine: "2%",
+        price: 25,
+        image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/6801026f9d2ef545721d5d90_Vozol-Vista-Kit.jpg5_.webp",
+        flavours: ["Sour Apple", "Kiwi Passionfruit Guava", "Cherry Cola", "Blue Razz Ice"]
+      },
+      {
+        name: "MEDIAMAX PhoneVape 40K",
+        puffs: 40000,
+        nicotine: "2%",
+        price: 30,
+        image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680102844b38ea60299f8bf7_%E4%B8%BB%E5%9B%BE-1.webp",
+        flavours: [
+          "Strawberry Watermelon Ice", "Strawberry Ice", "Cherry Strawberry Raspberry", "Fizzy Cherry Cola",
+          "Watermelon Ice", "Blue Razz Cherry", "Blueberry Raspberry", "Peach Mango Watermelon",
+          "Strawberry Kiwi", "Blueberry Watermelon"
+        ]
+      },
+      {
+        name: "FUMOT Crystal 12K",
+        puffs: 12000,
+        nicotine: "2%",
+        price: 20,
+        image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680102a07cb5b9af192ac402_Fumot-Crystal-12000-3.jpeg",
+        flavours: ["Fruity Fusion", "Watermelon Bubblegum"]
+      },
+      {
+        name: "FUMOT Crystal 4.5K",
+        puffs: 4500,
+        nicotine: "2%",
+        price: 20,
+        image: "https://cdn.prod.website-Files.com/6685befcece47fe6d2a75ef8/680102d8891db73fae615a83_SKE_Crystal_Super_Max_4500_Puffs_Disposable_Vape_-_Blog_7eeb6280-186a-42c2-a1a9-e11c0b482fda.webp",
+        flavours: [
+          "Lemon & Lime", "Blueberry Cherry Cranberry", "Strawberry Raspberry Cherry", "Fresh Menthol Mojito",
+          "Juicy Blueberry", "Watermelon Strawberry", "Apple Watermelon", "Cola Ice"
+        ]
+      },
+      {
+        name: "FUMOT Crystal 600",
+        puffs: 600,
+        nicotine: "2%",
+        price: 10,
+        image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680103086570a3c8dc130efc_fumot-randm-crystal-600ec597076-2ce2-4893-86cc-9eab1c467eb0.webp",
+        flavours: [
+          "Rainbow", "Blueberry Sour Raspberry", "Blueberry Peach Ice", "Starfruit Mulberry Lemon",
+          "Lemon & Lime", "Pineapple Peach Mango", "Kiwi Passionfruit Guava", "Blue Razz Lemonade", "Apple Peach"
+        ]
+      },
+      {
+        name: "IJOY 40K",
+        puffs: 40000,
+        nicotine: "2%",
+        price: 30,
+        image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/68010323d85907bb35fc96c2_ijoy-sd40000-40k-puffs-ai-voice-control-disposable_1200x1200%20(2).webp",
+        flavours: [
+          "Strawberry Kiwi", "Peach Mango Watermelon", "Cherry Lemon", "Peach Ice",
+          "Kiwi Passionfruit Guava", "Cotton Candy", "Watermelon Ice"
+        ]
+      },
+      {
+        name: "SHISHA VAPE AlFakher 8K",
+        puffs: 8000,
+        nicotine: "6%",
+        price: 20,
+        image: "https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/6801034ea74e06c09e2092fc_Al-Fakher-Crown-Bar-PRO-8K-Al-Fakher-262869460.webp",
+        flavours: [
+          "Berry Blue", "Hubba", "Gum Mint", "Grape Mint", "Space Dream",
+          "Magic Love", "Peach Ice", "Blueberry Gum", "Lemon Mint", "Cherry Fiesta"
+        ]
+      }
     ];
 
-    const flavours = ["Ледяной манго", "Клубника с молоком", "Мятный взрыв", "Арбуз", "Жвачка"];
     let cart = [];
 
     const vapeListEl = document.getElementById('vapeList');
@@ -176,21 +309,28 @@
       flavourWrap.style.justifyContent = "center";
       flavourWrap.style.gap = "1rem";
 
-      flavours.forEach(flavour => {
-        const card = document.createElement('div');
-        card.className = 'card';
-        card.innerText = flavour;
-        card.onclick = () => {
-          if (selectedFlavours.has(flavour)) {
-            selectedFlavours.delete(flavour);
-            card.classList.remove('selected');
-          } else {
-            selectedFlavours.add(flavour);
-            card.classList.add('selected');
-          }
-        };
-        flavourWrap.appendChild(card);
-      });
+      if (vape.flavours.length === 0) {
+        const noFlavoursMsg = document.createElement('p');
+        noFlavoursMsg.textContent = 'Нет доступных вкусов.';
+        noFlavoursMsg.style.margin = '1rem';
+        flavourWrap.appendChild(noFlavoursMsg);
+      } else {
+        vape.flavours.forEach(flavour => {
+          const card = document.createElement('div');
+          card.className = 'card';
+          card.innerText = flavour;
+          card.onclick = () => {
+            if (selectedFlavours.has(flavour)) {
+              selectedFlavours.delete(flavour);
+              card.classList.remove('selected');
+            } else {
+              selectedFlavours.add(flavour);
+              card.classList.add('selected');
+            }
+          };
+          flavourWrap.appendChild(card);
+        });
+      }
 
       const bottomButtons = document.createElement('div');
       bottomButtons.style.width = "100%";
@@ -204,11 +344,14 @@
 
       const addBtn = document.createElement('button');
       addBtn.textContent = "➕ В корзину";
+      addBtn.disabled = vape.flavours.length === 0;
       addBtn.onclick = () => {
-        selectedFlavours.forEach(flavour => {
-          cart.push({ vape: vape.name, flavour, price: vape.price, qty: 1 });
-        });
-        showCart();
+        if (vape.flavours.length > 0) {
+          selectedFlavours.forEach(flavour => {
+            cart.push({ vape: vape.name, flavour, price: vape.price, qty: 1 });
+          });
+          showCart();
+        }
       };
 
       bottomButtons.appendChild(backBtn);
