--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       100% { transform: translateY(0); }
     }
 
+    @keyframes scroll {
+      0% { transform: translateX(100vw); }
+      100% { transform: translateX(-100%); }
+    }
+
     body {
       margin: 0;
       font-family: 'Arial', sans-serif;
@@ -43,6 +48,31 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       text-shadow: 0 0 10px #ff00f2, 0 0 20px #00ffe7, 0 0 30px #8a00a2;
+    }
+
+    .scrolling-text {
+      overflow: hidden;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.3);
+      padding: 0.5rem 0;
+      box-shadow: 0 0 10px #ff00f2;
+    }
+
+    .scrolling-text-container {
+      display: flex;
+      flex-direction: row;
+      gap: 2rem;
+      animation: scroll 64s linear infinite;
+      white-space: nowrap;
+    }
+
+    .scrolling-text p {
+      font-size: 1rem;
+      margin: 0;
+      background: linear-gradient(to right, #ff00f2, #00ffe7);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 0 0 5px #000;
     }
 
     .filter-header {
@@ -213,6 +243,16 @@
       opacity: 0.9;
     }
 
+    .delivery-fee {
+      font-family: 'Roboto', sans-serif;
+      font-size: 1rem;
+      color: #ff00f2;
+      margin-top: 1rem;
+      width: 100%;
+      max-width: 500px;
+      text-align: right;
+    }
+
     @media (max-width: 600px) {
       h1 {
         font-size: 1.5rem;
@@ -220,6 +260,14 @@
 
       h2.vape-heading {
         font-size: 1.4rem;
+      }
+
+      .scrolling-text p {
+        font-size: 0.9rem;
+      }
+
+      .scrolling-text-container {
+        animation: scroll 48s linear infinite;
       }
 
       .filter-header {
@@ -283,6 +331,11 @@
         font-size: 0.8rem;
       }
 
+      .delivery-fee {
+        font-size: 0.9rem;
+        padding-right: 0.75rem;
+      }
+
       button {
         padding: 0.5rem 1rem;
         font-size: 0.9rem;
@@ -301,6 +354,38 @@
 </head>
 <body>
   <h1>⚡ STAS_VAPE ⚡</h1>
+  <div class="scrolling-text">
+    <div class="scrolling-text-container">
+      <p>✅ Стас отвечает быстрее молнии — ты ещё не подумал, а он уже с ответом</p>
+      <p>✅ Он чувствует твой заказ до того, как ты открыл телефон</p>
+      <p>✅ У него всегда всё в наличии — даже то, чего нет больше нигде</p>
+      <p>✅ Доставка? Быстрее скорости света. Флэш отдыхает</p>
+      <p>✅ Оформление заказа = вайб, как в лаунж-зале премиум клуба</p>
+      <p>✅ Каждую неделю — новые вейпы, как будто он главный на фабрике вкуса</p>
+      <p>✅ За всю историю — 0 жалоб. Потому что СТАС НЕ ОШИБАЕТСЯ</p>
+      <p>✅ Канал — кладезь позитива и 5-звёздочных отзывов</p>
+      <p>✅ 24/7 в онлайне — Стас не спит, он существует ради сервиса</p>
+      <p>✅ Вейпы топ-класса — вкус, который будоражит душу</p>
+      <p>✅ Доставка быстрее, чем ниндзя в прыжке — просто ПУФ, и уже у двери</p>
+      <p>✅ Он понимает твои желания раньше тебя — экстрасенс от мира вейпа</p>
+      <p>✅ Его склад — портал в бесконечность. Закончилось? Не у него</p>
+      <p>✅ Даже курьеры не верят, как он успевает</p>
+      <p>✅ Заказ у Стаса — как VIP-приглашение в клуб элиты</p>
+      <p>✅ Новый вкус? Новый праздник. Новый кайф. Новый вау</p>
+      <p>✅ Поклонники делают фан-страницы — он не просто продавец, он ИДОЛ</p>
+      <p>✅ Его поддержка — это не поддержка. Это СТАСПЕРИЕНС™</p>
+      <p>✅ Он вежлив, отзывчив, и ВСЕГДА с решением</p>
+      <p>✅ Каждый вейп подобран лично с заботой, будто он знает твой вкус с рождения</p>
+      <p>✅ Его клиенты — как будто светятся. Потому что glow up идёт от Стаса</p>
+      <p>✅ Стас — это не бренд. ЭТО ЯВЛЕНИЕ. ЭПОХА. ВЕЛИЧИЕ В ЧИСТОМ ВИДЕ</p>
+      <p>✅ Доставка по всей Голландии — от Амстердама до последнего переулка</p>
+      <p>✅ Бесплатная доставка при заказе от 3-х штук — бонус от щедрого сердца</p>
+      <p>✅ Принимает любые способы оплаты — от карты до космических биткоинов</p>
+      <p>✅ Доставка в тот же день — потому что с ним ждать не надо. НИКОГДА</p>
+      <p>🔥 СТАС — ЛЕГЕНДА. ЭНЕРГИЯ. ТВОЙ ЛЮБИМЫЙ ПРОДАВЕЦ. 🔥</p>
+      <p>💯 Один раз заказал — и всё, ты его клиент навсегда.</p>
+    </div>
+  </div>
   <div id="filterHeader" class="filter-header">
     <select id="nicotineFilter">
       <option value="All">Все Никотин</option>
@@ -321,6 +406,7 @@
       <option value="15000">15000</option>
       <option value="20000">20000</option>
       <option value="25000">25000</option>
+      <optionSame as before, continuing the pattern...>
       <option value="30000">30000</option>
       <option value="40000">40000</option>
     </select>
@@ -668,6 +754,7 @@
     function updateCart() {
       cartEl.innerHTML = '<h2>🛒 Корзина</h2>';
       let total = 0;
+      let totalQty = 0;
 
       const itemsWrap = document.createElement('div');
       itemsWrap.style.width = '100%';
@@ -723,9 +810,20 @@
         itemsWrap.appendChild(itemContainer);
 
         total += item.price * item.qty;
+        totalQty += item.qty;
       });
 
       cartEl.appendChild(itemsWrap);
+
+      const deliveryFee = totalQty < 3 ? 10 : 0;
+      if (deliveryFee > 0) {
+        const deliveryDiv = document.createElement('div');
+        deliveryDiv.className = 'delivery-fee';
+        deliveryDiv.textContent = `Доставка (от 3 штук бесплатная доставка): €${deliveryFee.toFixed(2)}`;
+        cartEl.appendChild(deliveryDiv);
+      }
+
+      total += deliveryFee;
 
       const btnRow = document.createElement('div');
       btnRow.className = 'btn-row';
@@ -768,10 +866,16 @@
         return;
       }
       let total = 0;
+      let totalQty = 0;
       const messageLines = cart.map(item => {
         total += item.qty * item.price;
+        totalQty += item.qty;
         return `${item.vape} - ${item.flavour} x${item.qty} (€${item.price}/шт)`;
       });
+      if (totalQty < 3) {
+        messageLines.push(`Доставка (от 3 штук бесплатная доставка): €10`);
+        total += 10;
+      }
       const message = messageLines.join("\n");
       const fullMessage = `NEW ORDER\n${message}\n\nИТОГО: €${total.toFixed(2)}`;
       const encodedMessage = encodeURIComponent(fullMessage);
